--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -20,3 +20,11 @@
     color: #777;
     width: 100%;
 }
+
+.login-form p {
+    font: 0.5rem;
+    display: block;
+    margin-top: 10px;
+    padding: 10px 10px;
+    background-color: #FFE5E5;
+}
